# rust_game_project

./: .gitignore  .travis.yml  Cargo.toml  README.md
assets/characters/: CREDIT.txt
src/: actor.rs  all_sprites.rs  bot.rs  camera.rs  coord.rs  creature.rs  effect.rs  enums.rs  field.rs  interactable.rs  inventory.rs  item.rs  level1.lvl  level1.xml  level1_small_tileset.lvl  main.rs  object.rs  player.rs  player_hub.rs  renderable.rs  sounds.rs  util.rs
src/io/: all_sprites.rs  mod.rs  sprite.rs  tileset.rs  xml.rs
src/level/: mod.rs
