[package]

name = "spinning-square"
version = "0.1.0"
authors = [
    "TyOverby <ty@pre-alpha.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]

[[bin]]
name = "spinning-square"

[dependencies]
piston_window = "0.62.0"
find_folder = "*"
gfx_device_gl = "0.13.0"
piston2d-opengl_graphics = "0.38.0"

