[package]

name = "spinning-square"
version = "0.1.0"
authors = [
    "TyOverby <ty@pre-alpha.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]

[[bin]]
name = "spinning-square"

[dependencies]
piston_window = "0.62.0"
find_folder = "*"
gfx_device_gl = "0.13.0"
gfx = "0.14.0"
piston2d-gfx_graphics = "0.36.0"
vecmath = "0.3.0"
image = "0.12.2"
